hphp/test/slow/hashbang_regression.php.expectf
Fatal error: Cannot use unstable feature: `enum_class_label` in %s/test/slow/hashbang_regression.php on line 3
